crates/ink/tests/ui/event/fail/conficting_attributes_inline.stderr
error: cannot specify `signature_topic` with `anonymous` in ink! event item configuration argument
 --> tests/ui/event/fail/conficting_attributes_inline.rs:2:18
  |
2 | #[ink(anonymous, signature_topic = "1111111111111111111111111111111111111111111111111111111111111111")]
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Event: ink::ink_env::Event` is not satisfied
 --> tests/ui/event/fail/conficting_attributes_inline.rs:1:1
  |
1 | #[ink::event]
  | ^^^^^^^^^^^^^ the trait `ink::ink_env::Event` is not implemented for `Event`
  |
  = note: this error originates in the attribute macro `ink::event` (in Nightly builds, run with -Z macro-backtrace for more info)
